[tool.poetry]
name = "MBackup"
version = "0.1.0"
description = "MongoDB => 阿里云 OSS 自动备份"
authors = ["yezi <yehaowei20060411@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
PyYAML = "^6.0"
oss2 = "^2.16.0"
cryptography = "37.0.4"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]
types-PyYAML = "^6.0.11"
flake8 = "^5.0.4"
yapf = "^0.32.0"
mypy = "^0.971"
memray = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
